--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    W - accelerate 
-		    S - decelerate 
-		    A - turn left 
-		    D - turn right 
-		    X - hyperdrive
+		    W - accelerate <br>
+		    S - decelerate <br>
+		    A - turn left <br>
+		    D - turn right <br>
+		    X - hyperdrive <br>
+		    Q - shoot 
 	    </footer>
 	</body>
 </html>
