--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Asteroids wooshhh</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde bullet.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde bullets.pde">
 				</canvas>
 		    </section>
 	    <footer>
